[package]
name = "hourglass-protocol"
version = "0.1.1"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hourglass_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-pod = "0.1.1"
solana-program = "*"
spl-token-metadata-interface = "0.2.1"
clockwork-sdk = { git = "https://github.com/kubaplata/clockwork" }

